# oiltank-ph

./: .gitignore  CLAUDE.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/api/: main.py  routes.py
backend/bootstrap/: load_vessel_master.py
backend/ingestor/: aisstream.py  enrich.py  main.py  store.py
backend/shared/: db.py  estimator.py  models.py  schema.sql
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Map.tsx  SubtypeFilter.tsx  VesselPanel.tsx
infra/: apis.tf  artifact.tf  iam.tf  main.tf  outputs.tf  run_api.tf  run_job.tf  scheduler.tf  secrets.tf  sql.tf  terraform.tfvars.example  variables.tf
