[project]
name = "oiltank-ph-backend"
version = "0.1.0"
description = "Backend services for the Philippine oil tanker tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "cloud-sql-python-connector[pg8000]>=1.13",
    "pg8000>=1.31",
    "pydantic>=2.7",
    "websockets>=12",
    "structlog>=24",
    "python-dateutil>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "api*", "ingestor*", "bootstrap*"]

[tool.setuptools.package-data]
shared = ["schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"
